# exchange-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PLAN.md  PROGRESS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  code-quality.yml  run_java_test.sh
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  build.yml  ci.yml  code-quality.yml
.gitlab/merge_request_templates/: Default.md
benchmarks/: CMakeLists.txt  PerfLongAdaptiveRadixTreeMap.cpp  PerfLongAdaptiveRadixTreeMapJavaAligned.cpp
docs/: ARCHITECTURE.md  ART_Cpp_Java_Cache_Comparison.md  ART_Performance_Baseline.md  BUILD.md  CODE_QUALITY_TOOLS.md  CPP20_VALUE_CATEGORIES_AND_MOVE_SEMANTICS.md  CUSTOM_DATA_STRUCTURES.md  DISTRIBUTED_ARCHITECTURE.md  DISTRIBUTED_ARCHITECTURE_V2.md  EXCHANGE_CONCEPTS.md  FENCE_GUIDE.md  GATEWAY_TECH_STACK.md  HOT_PATH_PERFORMANCE_TODO.md  LATENCY_DIAGNOSIS.md  LATENCY_REFERENCE_DATA.md  LOW_LATENCY_CORE.md  MISSING_FEATURES.md  PERFORMANCE_BENCHMARK_COMPARISON.md  README.md  REMAINING_TASKS.md  RUNNING_TESTS.md  SPIN_YIELD_PATTERN.md
docs/guides/: ART_Tree_Deep_Dive_Tutorial.md  ART_Tree_Guide.md  FENCE_GUIDE.md  FIX_PROTOCOL_GUIDE.md  Java_Object_Layout_with_int64.md  MEMORY_ORDER_PERFORMANCE_ANALYSIS.md  MPSC_DISRUPTOR_GUIDE.md  OrderBook_Data_Structure_Guide.md  zh_memory_order.md
docs/others/: ART_Tree_Guide.md  LATENCY_REFERENCE_DATA.md  TECH_NODES.md
docs/research/: CRYPTO_EXCHANGE_LATENCY_BENCHMARK.md  EXCHANGE_LATENCY_INDUSTRY_BENCHMARK.md  FINANCIAL_RAFT_RESEARCH.md
docs/scripts/: generate_latency_chart.py
examples/: CMakeLists.txt
include/exchange/core/: ExchangeApi.h  ExchangeCore.h  IEventsHandler.h  SimpleEventsProcessor.h
include/exchange/core/common/: BalanceAdjustmentType.h  BytesIn.h  BytesOut.h  CoreSymbolSpecification.h  CoreWaitStrategy.h  EventChain.h  EventChainCollector.h  IOrder.h  L2MarketData.h  MatcherEventType.h  MatcherTradeEvent.h  Order.h  OrderAction.h  OrderType.h  PositionDirection.h  StateHash.h  SymbolPositionRecord.h  SymbolType.h  UserProfile.h  UserStatus.h  VectorBytesIn.h  VectorBytesOut.h  Wire.h  WriteBytesMarshallable.h
include/exchange/core/orderbook/: IOrderBook.h  OrderBookDirectImpl.h  OrderBookEventsHelper.h  OrderBookNaiveImpl.h  OrdersBucket.h  OrdersSpliterator.h
include/exchange/core/processors/: BinaryCommandsProcessor.h  DisruptorExceptionHandler.h  EventProcessorAdapter.h  GroupingProcessor.h  MatchingEngineReportQueriesHandler.h  MatchingEngineRouter.h  ResultsHandler.h  RiskEngine.h  RiskEngineReportQueriesHandler.h  SharedPool.h  SimpleEventHandler.h  SymbolSpecificationProvider.h  TwoStepMasterProcessor.h  TwoStepSlaveProcessor.h  UserProfileService.h  WaitSpinningHelper.h
include/exchange/core/utils/: AffinityThreadFactory.h  CoreArithmeticUtils.h  FastNanoTime.h  HashingUtils.h  LatencyBreakdown.h  Logger.h  ProcessorMessageCounter.h  ReflectionUtils.h  SerializationUtils.h  UnsafeUtils.h  Utils.h
scripts/: format_code.sh  plot_hdr_histogram.gp  plot_histogram.sh  run-clang-tidy.sh  run_clang_tidy.sh
src/exchange/core/: ExchangeApi.cpp  ExchangeCore.cpp  SimpleEventsProcessor.cpp
src/exchange/core/common/: CoreSymbolSpecification.cpp  Order.cpp  (+4 more)
tests/: CMakeLists.txt  PERF_BENCHMARK.md  TEST_COMPARISON.md
tests/collections/art/: LongAdaptiveRadixTreeMapTest.cpp
tests/core/: SimpleEventsProcessorTest.cpp
tests/examples/: ITCoreExample.cpp
tests/integration/: ITExchangeCoreIntegration.cpp  ITExchangeCoreIntegration.h  ITExchangeCoreIntegrationBasic.cpp  ITExchangeCoreIntegrationBasic.h  ITExchangeCoreIntegrationLatency.cpp  ITExchangeCoreIntegrationLatency.h  ITExchangeCoreIntegrationRejection.cpp  ITExchangeCoreIntegrationRejection.h  ITExchangeCoreIntegrationRejectionBasic.cpp  ITExchangeCoreIntegrationRejectionBasic.h  ITExchangeCoreIntegrationRejectionLatency.cpp  ITExchangeCoreIntegrationRejectionLatency.h  ITExchangeCoreIntegrationStress.cpp  ITExchangeCoreIntegrationStress.h  ITExchangeCoreIntegrationStressBasic.cpp  ITExchangeCoreIntegrationStressBasic.h  ITExchangeCoreIntegrationStressLatency.cpp  ITExchangeCoreIntegrationStressLatency.h  ITFeesExchange.cpp  ITFeesExchange.h  ITFeesExchangeBasic.cpp  ITFeesExchangeBasic.h  ITFeesExchangeLatency.cpp  ITFeesExchangeLatency.h  ITFeesMargin.cpp  ITFeesMargin.h  ITFeesMarginBasic.cpp  ITFeesMarginBasic.h  ITFeesMarginLatency.cpp  ITFeesMarginLatency.h  ITMultiOperation.cpp  ITMultiOperation.h
tests/nasdaq/: ITCH50StatListener.cpp  ITCH50StatListener.h  NasdaqReader.cpp  NasdaqReader.h
tests/orderbook/: OrderBookBaseTest.cpp  OrderBookBaseTest.h  OrderBookDirectImplExchangeTest.cpp  OrderBookDirectImplMarginTest.cpp  OrderBookDirectImplTest.cpp  OrderBookDirectImplTest.h  OrderBookNaiveImplExchangeTest.cpp  OrderBookNaiveImplMarginTest.cpp  OrdersBucketTest.cpp  OrdersBucketTest.h
tests/perf/: PerfJournaling.cpp  PerfJournaling.h  PerfLatency.cpp  PerfLatency.h  PerfLatencyJournaling.cpp  PerfLatencyJournaling.h  PerfPersistence.cpp  PerfPersistence.h  PerfThroughput.cpp  PerfThroughput.h  PerfThroughputJournaling.cpp  PerfThroughputJournaling.h
tests/steps/: OrderStepdefs.cpp  OrderStepdefs.h  RunCukeNaiveTests.cpp  RunCukesDirectLatencyTests.cpp  RunCukesDirectThroughputTests.cpp
tests/util/: ExchangeTestContainer.cpp  ExchangeTestContainer.h  ExecutionTime.cpp  ExecutionTime.h  FutureDebugHelper.h  JavaRandom.h  JournalingTestsModule.cpp  JournalingTestsModule.h  L2MarketDataHelper.cpp  L2MarketDataHelper.h  LatencyTestsModule.cpp  LatencyTestsModule.h  LatencyTools.cpp  LatencyTools.h  MatcherTradeEventGuard.h  PersistenceTestsModule.cpp  PersistenceTestsModule.h  RandomCollectionsMerger.h  TestConstants.cpp  TestConstants.h  TestDataParameters.cpp  TestDataParameters.h  TestOrdersGenerator.cpp  TestOrdersGenerator.h  TestOrdersGeneratorConfig.cpp  TestOrdersGeneratorConfig.h  TestOrdersGeneratorSession.cpp  TestOrdersGeneratorSession.h  ThroughputTestsModule.cpp  ThroughputTestsModule.h  UserCurrencyAccountsGenerator.cpp  UserCurrencyAccountsGenerator.h
(+100 files in other folders)
