# Examples will be added here as development progresses
# For now, this is a placeholder

if(BUILD_EXAMPLES)
    # Example structure:
    # add_executable(basic_example
    #     basic_example.cpp
    # )
    # target_link_libraries(basic_example
    #     PRIVATE
    #         exchange-cpp
    # )
endif()

